# epub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: release.yml
OEBPS/: content.opf  toc.ncx
benches/: parser_benchmark.rs
configs/: README.md  basic.yaml  full.yaml  kaf-basic.yaml  kaf-webnovel.yaml  webnovel.yaml
docs/: USAGE.md  chapter-detection-improvements.md  phase4-completion.md
output/: batch_report_20260326_122122.json
skills/: kaf-cli-rs.md
src/: batch.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs
src/batch/: enhanced.rs  mod.rs  report.rs
src/config/: loader.rs  mod.rs  presets.rs  validator.rs
src/config_backup/: loader.rs  mod.rs  presets.rs  validator.rs
src/converter/: epub3.rs  mod.rs
src/parser/: chapter_detector.rs  format_detector.rs  markdown_parser.rs  mod.rs  paragraph_processor.rs  scorer.rs
src/style/: css_generator.rs  mod.rs  theme.rs
src/utils/: cover.rs  encoding.rs  file.rs  html.rs  mod.rs  regex.rs
