[package]
name = "kaf-cli"
version = "0.1.1"
edition = "2021"
authors = ["kaf-rs team"]
description = "Convert txt to epub ebook"
license = "GPL-3.0-or-later"
repository = "https://github.com/your-username/kaf-cli"

[[bin]]
name = "kaf-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# 异步运行时
tokio = { version = "1.37", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# 正则表达式
regex = "1.10"
once_cell = "1.19"

# 编码检测
encoding_rs = "0.8"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 图片处理
image = "0.25"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# ZIP 压缩（EPUB）
zip = "0.6"

# UUID
uuid = { version = "1.8", features = ["v4"] }

# 内存映射
memmap2 = "0.9"

# 字节处理
bytes = "1.6"

# EPUB 生成
epub-builder = "0.8"

# 日期时间
chrono = "0.4"

[dev-dependencies]
# 测试
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "parser_benchmark"
harness = false
